--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+	<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 	<title>Document</title>
 </head>
 <body>
 	<div id="app"></div>
+	<script type="text/babel">
+		class App extends React.Component{
+			render(){
+				return(
+					<div className="app-content">
+						<h1>This is a sample project using REACT CDN</h1>
+					</div>
+				)
+			}
+		}
+
+		ReactDOM.render(<App/> , document.getElementById('app'))
+	</script>
 </body>
 </html>
