--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 				return(
 					<div className="app-content">
 						<h1>This is a sample project using REACT CDN</h1>
+						<p> { Math.floor(Math.random() *5)}</p>
 					</div>
 				)
 			}
