--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 	<div id="app"></div>
 	<script type="text/babel">
 		class App extends React.Component{
+			state ={
+				name: "John",
+				age: 30
+			}
 			render(){
 				return(
 					<div className="app-content">
 						<h1>This is a sample project using REACT CDN</h1>
 						<p> { Math.floor(Math.random() *5)}</p>
+						<p> My name is {this.state.name} and age is {this.state.age} </p>
 					</div>
 				)
 			}
