changed to arrow function to fix 'this' issue

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 				name: "John",
 				age: 30
 			}
-			handleClick(e){
-				console.log(e.target)
+			handleClick= (e)=>{
+				console.log(e.target);
+				console.log(this.state)
 			}
 			handleMouseOver(e){
 				console.log(e.target.value)
