--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 			handleClick= (e)=>{
 				console.log(e.target);
 				console.log(this.state)
-			}
+				this.setState({
+					name: "Arya"
+				})			}
 			handleMouseOver(e){
 				console.log(e.target.value)
 			}
