form onSubmit added, e.preventDefault

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 					name: e.target.value
 				})
 			}
-			handleBtn =(e) =>{
-				console.log("works only if CLICKED on btn,doesnt  work if pressed ENTER")
+			handleSubmit =(e) =>{
+				e.preventDefault();
+				console.log("form submitted with name :", this.state.name)
 			}
 			render(){
 				return(
@@ -45,9 +46,9 @@
 						<button onClick={this.handleClick}>Click</button>
 						<button onMouseOver={this.handleMouseOver}> Hover </button>
 						<p onCopy={this.handleCopy}> DOnt copy this </p>
-						<form>
+						<form onSubmit={this.handleSubmit}>
 							<input type="text" onChange={this.handleChange} />
-							<button onClick={this.handleBtn}> Submit </button>
+							<button > Submit </button>
 						</form>
 
 					</div>
